--- a/H2H_all_Fungi/Vec_all.ipynb
+++ b/H2H_all_Fungi/Vec_all.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e9e9db8-e833-4ed0-b40e-c0b4a5f0304c",
+   "metadata": {},
+   "source": [
+    "**Aquí se usa la función definida para obtener los genes H2H de Mucor lusitanicus, con la diferencia de que no hay datos transciptómicos y en consecuencia se elimina la condición de que los dos genes se expresen en la misma morfología**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "3b5e1a53-5a08-40a6-9b3c-bd57a3ea250b",
@@ -50,6 +58,14 @@
     "            genes_vecinos_todos[gen_info['ID']] = vecinos\n",
     "\n",
     "    return genes_vecinos_todos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1a9d4bc-bb63-40db-94eb-085440e6b3e2",
+   "metadata": {},
+   "source": [
+    "**La función se aplica a todos los organismos usando sus correspondientes archivos de clústeres y gff (BED)**"
    ]
   },
   {
@@ -112,16 +128,6 @@
     "\n",
     "    except Exception as e:\n",
     "        print(f\"Error procesando el archivo {file}: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd284040-9ff2-4055-8329-77753306275b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hhklj"
    ]
   },
   {
