--- a/Orthogroups_Analysis/merging_orth.ipynb
+++ b/Orthogroups_Analysis/merging_orth.ipynb
@@ -14,42 +14,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90a8b01a-559c-4945-a981-6e992d136410",
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "tags": []
-   },
+   "id": "cfd898f6-473a-474c-9183-1594e9d5040b",
+   "metadata": {},
    "source": [
-    "df = pd.read_csv(\"Orthogroups.csv\", sep=\";\")\n",
-    "df =df[[\"Orthogroup\",\"Rhimi59\"]]\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "432e6e4f-6283-4fd2-9256-a82ffa3955b3",
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "tags": []
-   },
-   "source": [
-    "#Crear una lista para almacenar las nuevas filas\n",
-    "nuevas_filas = []\n",
-    "#iterar sobre cada una de las filas del df\n",
-    "for index, row in df.iterrows():\n",
-    "    ortho = row[\"Orthogroup\"]\n",
-    "    ids   = str(row[\"Rhimi59\"]).split(\",\") # separar los IDs por coma\n",
-    "    \n",
-    "    #iterar sobre cada ID y agregarlo como una nueva fila junto con el ortogrupo\n",
-    "    for id in ids:\n",
-    "        nuevas_filas.append([ortho, id.strip()]) #eliminar los espacios en blanco alrededor de los IDs si los hay\n",
-    "#crear un nuevo df con las nuevas filas\n",
-    "nuevo_df = pd.DataFrame(nuevas_filas, columns=[\"Orthogroup\", \"Rhimi59\"])\n",
-    "nuevo_df"
+    "**La finalidad de este análisis es identificar combinaciones de genes H2H que están conservados entre los hongos de este estudio. Para conseguir este objetivo se han determinado los ortogrupos a los que pertenecen estos genes.**"
    ]
   },
   {
@@ -57,7 +25,7 @@
    "id": "b15ee253-d28e-4fe7-b77c-805c6d3ed450",
    "metadata": {},
    "source": [
-    "Antes de hacer el merge como hay genes que pueden tener más de un vecino (son muy pocos pero luego pueden fastidiar por eso se deben procesar los archivos teniendo en cuenta que puede haber genes con más de un vecino)"
+    "Antes de hacer el merge como hay genes que pueden tener más de un vecino (son muy pocos pero luego pueden fastidiar, por eso se deben procesar los archivos teniendo en cuenta que puede haber genes con más de un vecino)"
    ]
   },
   {
@@ -1721,24 +1689,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc34a2b9-7517-4f10-9563-77142ccc34c0",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "9b78fcf7-64f8-411d-ab63-955c42748368",
    "metadata": {},
    "source": [
     "MERGE DE LOS VECINOS Y DE LOS ORTOGRUPOS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5095a425-a410-4869-a1ca-53a662459487",
-   "metadata": {},
-   "source": [
-    "este es el bueno"
    ]
   },
   {
@@ -1785,7 +1739,7 @@
    "id": "7e629c05-ec40-4e3b-9e62-b88a90597bd3",
    "metadata": {},
    "source": [
-    "Quiero extraer las columnas Orthogroup_x y Orthogroup_y de cada archivo *_merge.csv y luego concatenar los resultados de las columnas para tener sólo dos columnas con todos los valores. Y después quiero seleccionar las combinaciones únicas (es decir parejas únicas de Orthogroup_x y Orthogroup_y)"
+    "Extraer las columnas Orthogroup_x y Orthogroup_y de cada archivo *_merge.csv y luego concatenar los resultados de las columnas para tener sólo dos columnas con todos los valores. Y después quiero seleccionar las combinaciones únicas (es decir parejas únicas de Orthogroup_x y Orthogroup_y)."
    ]
   },
   {
@@ -1986,10 +1940,8 @@
     }
    ],
    "source": [
-    "import glob\n",
-    "\n",
     "# Obtener la lista de todos los archivos *_merge.csv en el directorio actual\n",
-    "archivos_merge = glob.glob(\"*_merge.csv\")\n",
+    "archivos_merge = glob(\"*_merge.csv\")\n",
     "\n",
     "# Lista para almacenar los DataFrames de las columnas Orthogroup_x y Orthogroup_y\n",
     "columnas_orthogroup = []\n",
@@ -2043,14 +1995,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import glob\n",
-    "\n",
     "# Leer el DataFrame con las combinaciones únicas\n",
     "combinaciones_unicas = pd.read_csv(\"combinaciones_unicas.csv\")\n",
     "\n",
     "# Obtener la lista de todos los archivos merge.csv en el directorio actual\n",
-    "archivos_merge = glob.glob(\"*_merge.csv\")\n",
+    "archivos_merge = glob(\"*_merge.csv\")\n",
     "\n",
     "# Crear un DataFrame para almacenar los recuentos por organismo\n",
     "recuentos_por_organismo = pd.DataFrame(combinaciones_unicas[['Orthogroup_x', 'Orthogroup_y']])\n",
@@ -2085,7 +2034,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Voy a filtar para obtener las columnas que tengan al menos dos copias de una pareja de ortologos.\n"
+    "Filtar para obtener las columnas que tengan al menos dos copias de una pareja de ortólogos."
    ]
   },
   {
@@ -2095,8 +2044,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# Leer el archivo CSV\n",
     "df = pd.read_csv(\"recuentos_por_organismo.csv\")\n",
     "\n",
@@ -2112,7 +2059,7 @@
    "id": "36c97efe-83ca-406b-a2af-26e044e7d36d",
    "metadata": {},
    "source": [
-    "Parejas unicas"
+    "**Parejas únicas**"
    ]
   },
   {
