--- a/PromotoresDimorficos/get_location.ipynb
+++ b/PromotoresDimorficos/get_location.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d368548-fe92-4d22-b48b-0999bf4891ba",
+   "metadata": {},
+   "source": [
+    "**En este análisis se pretende obtener archivos BED para las regiones intergénicas de los genes H2H dimórficos**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "7b37846a-0079-48d4-bf2b-ce0cbab71d8d",
